# resume-pick

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  rsas_cli.py  test_kb_ingestion.py
config/: default.yaml
results/: demo_ml.json  live-50.csv  live-50.json  prefilter_demo.json  real_demo.json  real_demo_full.json
resumesets/: AGENTS.md
rsas/agents_sdk/: pipeline_agent.py
rsas/cli/: __init__.py  main.py
rsas/core/agents/: base.py  bias_check.py  job_understanding.py  matching.py  output.py  parser.py  ranking.py  scoring.py  skills_extraction.py
rsas/core/config/: loader.py
rsas/core/models/: __init__.py  audit.py  base.py  candidate_profile.py  enums.py  job_profile.py  ranked_candidate.py  scorecard.py
rsas/core/orchestrator/: __init__.py  pipeline.py
rsas/core/storage/: object_store.py
rsas/integrations/: openai_client.py
rsas/interactive/: assistant.py
rsas/kb/: __init__.py
rsas/kb/ingestion/: __init__.py  embedder.py  indexer.py  pipeline.py  summarizer.py
rsas/kb/search/: __init__.py
rsas/kb/storage/: __init__.py  chroma_client.py
rsas/kb/utils/: __init__.py  cost_tracker.py
rsas/observability/: logger.py
rsas/search/: service.py
sample_jobs/: data_engineer.txt  fullstack_developer.txt  senior_ml_engineer.txt
scripts/: run_full_pipeline.sh  run_subset_pipeline.sh
tests/e2e/: test_agents_sdk_stub.py  test_stub_pipeline.py
tests/unit/: test_object_store.py
